fixed short code templates note and warning

--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -1,9 +1,12 @@
 <aside class="admonition note">
   <div class="admonition-alt">
     <i class="fas fa-check"></i>
-    {{ if eq $.Site.Params.LanguageName "日本語" }}<span>補足</span>{{ end }}
-    {{ if eq $.Site.Params.LanguageName "English" }}<span>Tip</span>{{ end }}
-    {{ if eq $.Site.Params.LanguageName "中文(简体)" }}<span>补充</span>{{ end }}
+    <span>
+    {{- if eq $.Site.Params.LanguageName "日本語" -}}補足
+    {{- else if eq $.Site.Params.LanguageName "英語" -}}Note
+    {{- else if eq $.Site.Params.LanguageName "中文(简体)" -}}补充
+    {{- end -}}
+    </span>
   </div>
   <div class="admonition-content">{{ printf "%s" .Inner | markdownify }}</div>
 </aside>
