--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -171,7 +171,7 @@ body{position:relative;min-height:calc(100% - 56px);}
 .article ul li {
   margin: .5rem 0;
 }
-.article code{background:#eee}
+.article code,.article pre{background:#eee}
 .article .wrapTable {
   overflow: auto;
 }
