;overflow:hidden;を削除

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -289,7 +289,7 @@ body{position:relative;min-height:calc(100% - 56px);}
 .article p>code{white-space:nowrap;padding:2px 4px}
 .article hr{margin-top:1.5em}
 .article pre{padding:16px;line-height:1.5em;overflow:auto;-webkit-overflow-scrolling:touch}
-.article table{margin:15px 0;overflow:hidden;font-size: .93rem;}
+.article table{margin:15px 0;font-size: .93rem;}
 .article table th{text-align:left;}
 .article caption{text-align: left; font-weight: bold; font-size: 1.1rem;line-height: 2em;word-break: keep-all;}
 .article img{max-width:100%}
