--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,7 @@
 {{- $entries := $.Site.Home.Sections}}
 {{- $target := .}}
 <div id="mainmenu">
-<ul>
+<ul id="navi">
 {{- range $entries.ByWeight}}
   {{- template "mainmenu" (dict "curnode" . "target" $target )}}
 {{- end}}
@@ -18,7 +18,12 @@
             {{- if in .Params.disabled .Site.Params.TargetRegion}}
             {{- else}}
         <li>
-            <div class="category chevron{{- if .IsAncestor $target}} expand{{end}}">
+            <div class="category"> 
+                <span class="navi-icon">
+                    {{- if .IsAncestor $target}}<i class="fa fa-minus-circle"></i>
+                    {{- else}}<i class="fa fa-plus-circle"></i>
+                    {{- end}}
+                </span>
                 {{- if eq .RelPermalink $target.RelPermalink}}
                 <a href="#" class="current{{- if .IsAncestor $target}} expand{{end}}">
                 {{ else }}
@@ -45,11 +50,13 @@
             {{- if in .Params.disabled .Site.Params.TargetRegion}}
             {{- else}}
             <li>
-                {{- if eq .RelPermalink $target.RelPermalink}}
-                <a href="#" class="current" aria-current="page">{{ partial "title" .}}</a>
-                {{ else }}
-                <a href="{{ .RelPermalink}}">{{ partial "title" .}}</a>
-                {{ end -}}
+                <span class="navi-sp">
+                    {{- if eq .RelPermalink $target.RelPermalink}}
+                    <a href="#" class="current" aria-current="page">{{ partial "title" .}}</a>
+                    {{ else }}
+                    <a href="{{ .RelPermalink}}">{{ partial "title" .}}</a>
+                    {{ end -}}
+                </span>
             </li>
             {{- end}}
         {{- end}}
