英語をEnglishにする

--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -3,7 +3,7 @@
     <i class="fas fa-check"></i>
     <span>
     {{- if eq $.Site.Params.LanguageName "日本語" -}}補足
-    {{- else if eq $.Site.Params.LanguageName "英語" -}}Note
+    {{- else if eq $.Site.Params.LanguageName "English" -}}Note
     {{- else if eq $.Site.Params.LanguageName "中文(简体)" -}}补充
     {{- end -}}
     </span>
