--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -3,7 +3,7 @@
     <i class="fas fa-exclamation-circle"></i>
     <span>
     {{- if eq $.Site.Params.LanguageName "日本語" -}}注意
-    {{- else if eq $.Site.Params.LanguageName "英語" -}}Caution
+    {{- else if eq $.Site.Params.LanguageName "English" -}}Caution
     {{- else if eq $.Site.Params.LanguageName "中文(简体)" -}}注意
     {{- end -}}
     </span>
