--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -484,7 +484,7 @@ overflow-y: scroll;
 #footercopyright {
 }
 
-@media only screen and (max-width:800px){
+@media only screen and (min-width:800px){
 .footer .wrapper {
     justify-content: space-between;
     align-items: center;
