スマホサイズのときにフッターが崩れる件の修正

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -751,6 +751,12 @@ cursor: pointer;
   margin-top: 1rem;
 }
 
+@media only screen and (max-width:600px) {
+  .footer .wrapper {
+    height: 10rem;
+  }
+}  
+
 @media only screen and (max-width:800px) {
 #langselector {
   display: none;
