--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -565,7 +565,7 @@ ul.breadcrumbs {
 }
 #mainmenu a {
   display: inline-block;
-  padding: 10px 0;
+  padding: 10px 5px;
   width: 100%;
 }
 #mainmenu li ul {
