崩れ修正、ホバー時の上下の余白を調整

--- a/static/stylesheets/search_result.css
+++ b/static/stylesheets/search_result.css
@@ -1,6 +1,9 @@
 /*.backdrop {
     background-color: #ffffff;
 }*/
+.header .wrapper {
+    justify-content: space-between;
+}
 
 .main {
     justify-content: space-between;
@@ -110,7 +113,7 @@
   color: #333 !important;
 }
 .mf_finder_organic_doc_body_wrapper {
-  padding: .5rem 0 1.3rem 0;
+  padding: .5rem 0
 }
 .mf_finder_link {
   text-decoration: none;
