--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -311,9 +311,12 @@ overflow-y: scroll;
 .article h2 {
   font-size: 2.1rem;
   line-height: 1.2em;
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   margin-top: -24px;
   padding-top: 66px;
+  background: linear-gradient(transparent 90%, #a7d6ff 70%);
+  display: inline-block;
+  font-weight: 700;
 }
 .article h3 {
   font-size: 1.6rem;
@@ -321,16 +324,18 @@ overflow-y: scroll;
   margin-bottom: 15px;
   margin-top: -36px;
   padding-top: 66px;
+  font-weight: 700;
 }
 .article h4 {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   line-height: 1.2em;
   margin-bottom: 12px;
   margin-top: -36px;
   padding-top: 66px;
+  font-weight: 700;
 }
 .article h5 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.2em;
   margin-bottom: 10px;
   margin-top: -42px;
@@ -338,7 +343,7 @@ overflow-y: scroll;
   font-weight: 700;
 }
 .article h6 {
-  font-size: 1.0rem;
+  font-size: .8rem;
   line-height: 1.2em;
   margin-bottom: 10px;
   margin-top: -48px;
@@ -765,7 +770,6 @@ cursor: pointer;
 .nflink {
   margin-top: 1rem;
 }
-
 @media only screen and (max-width:600px) {
   .footer .wrapper {
     height: 9rem;
@@ -785,6 +789,23 @@ cursor: pointer;
 .header-logo-base {
   width: 200px;
 }
+.article h1 {
+  font-size: 1.75rem;
+  padding-top: 30px;
+}
+.article h2 {
+  font-size: 1.5rem;
+}
+ .article h3 {
+  font-size: 1.25rem;
+}
+ .article h4 {
+  font-size: 1.125rem;
+}
+.article h5 {
+  font-size: 1rem;
+}
+
 /*#footercenter {flex-direction: column;}*/
 }
 
