--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -174,6 +174,10 @@
 .article h1,.article h2,.article h3,.article h4,.article h5,.article h6 {
   clear: both;
 }
+.article h2 {
+  display: block;
+  background: none;
+}
 .article ol,.article p{
     margin: 0;
 }
