h2見出しの下線の色を調整

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -314,7 +314,7 @@ overflow-y: scroll;
   margin-bottom: 32px;
   margin-top: -24px;
   padding-top: 66px;
-  background: linear-gradient(transparent 90%, #a7d6ff 70%);
+  background: linear-gradient(transparent 90%, #bddfff 70%);
   display: inline-block;
   font-weight: 700;
 }
