Revert "Merge pull request #55 from masashihikita/patch-6"
This reverts commit 61208200acfa704e4da667b4136192011d8c6c14, reversing
changes made to 755605d88356921d04e8876fccb642828fefd325.

--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -174,6 +174,11 @@
 .article h1,.article h2,.article h3,.article h4,.article h5,.article h6 {
   clear: both;
 }
+.article h2 {
+  display: block;
+  background: none;
+  font-weight: normal;
+}
 .article ol,.article p{
     margin: 0;
 }
@@ -223,40 +228,20 @@
 #hotArticles-showMore.expand{
     transform: rotate(180deg);
 }
-
-
-.searchbox {
+.article .searchbox {
   max-width: 800px;
-  
-  margin: auto;
-    display: flex;
+  height: 60px;
+  border: 1px solid #e6e6e6;
+  background-color: #f6f6f6;
+  -webkit-display: flex;
+  display: flex;
+  -webkit-justify-content: flex-start;
   justify-content: flex-start;
+  -webkit-align-items: center;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
-.searchbox input[type=text]{
-    padding-right: 20px;
-    padding-left: 20px;
-    width: calc(100% - 54px);
-    height: 60px;
-  border: 1px solid #e6e6e6;
-    border-right: none;
-  background-color: #fff;
-  
-}
-.searchbox input[type=submit]{
-    width:55px;
-    height: 60px;
-  border: 1px solid #e6e6e6;
-    background: #f6f6f6 url("../search-solid.svg") no-repeat center;
-    background-size:60%
-}
-.searchbox input[type=submit]::after{
-	font-family: "Font Awesome 5 Free";
-    font-weight: 400;
-	content: "\f002";
-}
-
-
 .article .fa-search {
   margin-left: 12px;
   font-size: 1.5rem;
