--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -753,6 +753,11 @@ cursor: pointer;
 .nflink {
   margin-top: 1rem;
 }
+@media only screen and (max-width:600px) {
+  .footer .wrapper {
+    height: 9rem;
+  }
+}  
 
 @media only screen and (max-width:800px) {
 #langselector {
@@ -760,9 +765,6 @@ cursor: pointer;
 }
 .footer {
   display: block;
-}
-.footer .wrapper {
-  height: 9rem;
 }
 .header .searchbox {
   width: 240px;
