Revert "Merge branch 'staging' into patch-7"
This reverts commit d6bc3bf1568c2692122a397e8510768473a446a2, reversing
changes made to cf72d5f09698632b39698636500c02b042488b64.

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -759,6 +759,12 @@ cursor: pointer;
   }
 }  
 
+@media only screen and (max-width:600px) {
+  .footer .wrapper {
+    height: 9rem;
+  }
+}  
+
 @media only screen and (max-width:800px) {
 #langselector {
   display: none;
