--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,11 +9,11 @@
 
   {{if and (ne .Params.type "search_result") (ne .IsHome true)}}
     <div class="search-wrap">
-      <form id="headerSearchBox_form" action="https://jp.cybozu.help/k/ja/search_result.html" onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}'>
+      <form id="headerSearchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html" onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}'>
           <div class="searchbox">
-              <input type="text" name="q" id="headerSearchBox_input" class="search-input" placeholder="何をお探しですか？">
+              <input type="text" name="q" aria-label="search" id="headerSearchBox_input" class="search-input" placeholder="{{if eq .Lang "ja" }}何をお探しですか？{{ end }}{{if eq .Lang "en" }}Enter keywords to search help.{{ end }}{{if eq .Lang "zh" }}您可输入关键字查找{{ end }}">
               <input type="submit" name="commit" value="" class="search-submit" data-disable-with="">
-              <input type="hidden" name="ct" value="kintone ヘルプ全体">
+              <input type="hidden" name="ct" value="{{ .Site.Language.Params.search_all }}">
           </div>
         </form>
     </div>
