--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -153,7 +153,7 @@
   margin-right: 6px;
   margin-bottom: 6px;
 }
-.col-tile .fas,.col-tile .fab {
+.col-tile i {
   position: absolute;
   bottom: 18px;
   right: 8%;
