検索画面にがたつき解消を追加

--- a/static/stylesheets/search_result.css
+++ b/static/stylesheets/search_result.css
@@ -5,6 +5,8 @@
     justify-content: space-between;
 }
 
+.body { overflow-y: scroll; }
+
 .main {
     justify-content: space-between;
     padding-right: 16px;
