--- a/static/stylesheets/search_result.css
+++ b/static/stylesheets/search_result.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
 }
 
-.body { overflow-y: scroll; }
+body { overflow-y: scroll; }
 
 .main {
     justify-content: space-between;
