--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -193,8 +193,9 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: auto;
 }
 #langselector .selectedlang .fa-chevron-down {
-  margin-left: 5px;
+  margin:0!important
 }
+span.fa.fa-chevron-down {margin: 0}
 #langselector li:hover {
   background: #ddd;
 }
