--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -193,9 +193,8 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: auto;
 }
 #langselector .selectedlang .fa-chevron-down {
-  margin:0!important
+  margin-left: 5px;
 }
-span.fa.fa-chevron-down {margin: 0}
 #langselector li:hover {
   background: #ddd;
 }
