--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -195,6 +195,7 @@ h1, h2, h3, h4, h5, h6 {
 #langselector .selectedlang .fa-chevron-down {
   margin-left: 5px;
 }
+span.fa.fa-chevron-down {margin: 0}
 #langselector li:hover {
   background: #ddd;
 }
