--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -1,8 +1,8 @@
 {{if eq .Lang "ja" }}
 <aside id="enquete" style="display:none;">
   <form id="enqueteForm" name="enqueteForm" target="blankFrame" method="post">
-    <input type="hidden" name="questions[74180]" value="{{- partial "title" . -}}">
-    <input type="hidden" name="questions[74181]" value="https://jp.cybozu.help{{ .Permalink | relURL }}">
+    <input type="hidden" name="questions[1200722]" value="{{- partial "title" . -}}">
+    <input type="hidden" name="questions[1200723]" value="https://jp.cybozu.help{{ .Permalink | relURL }}">
     <input class="enqueteIpAddr" type="hidden" name="questions[74184]" value="">
     <input class="enqueteSubDomain" type="hidden" name="questions[74185]" value="">
     <input class="enqueteReferrer" type="hidden" name="questions[88367]" value="">
