--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -142,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
     border: 1px solid #e6e6e6;
     background: #f6f6f6 url("../images/search-solid.svg") no-repeat center;
     background-size:60%;
-    cursor: pointer
+    cursor: pointer;
    -webkit-appearance: none;
    border-radius: 0
 }
