--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -713,6 +713,26 @@ cursor: pointer;
   /* width: 400px; */
   font-size: .9rem;
 }
+.btn-article-vote a {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 25px;
+}
+.btn-article-vote .fa-stack-1x {
+  color: white;
+  font-size: 18px;
+}
+.btn-article-vote .fa-stack-2x {
+  transition: .3s;
+}
+.btn-article-vote .btn-article-vote-up .btn-article-vote-down .fa-stack-2x {
+  color: #70ffff;
+}
+.btn-social-giza a:hover .fa-stack-2x {
+  -webkit-transform: rotate(60deg);
+  transform: rotate(60deg);
+}
+
 .main {
   padding: 12px 0 6rem;
   width: 100%;
