--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -12,15 +12,15 @@
     <div id="enqueteYesOrNoBtns">
       この記事は役に立ちましたか？
       <div class="btn-article-vote">
-          <a href="#" class="btn-article-vote-up">
+          <a href="#" class="btn-article-vote-up" >
             <span class="fa-stack">
-                <i class="fas fa-certificate fa-stack-2x"></i>
+                <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fas fa-thumbs-up fa-stack-1x"></i>
             </span>
           </a>
           <a href="#" class="btn-article-vote-down">
               <span class="fa-stack">
-                  <i class="fas fa-certificate fa-stack-2x"></i>
+                  <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fas fa-thumbs-down fa-stack-1x"></i>
               </span>
           </a>
@@ -33,11 +33,25 @@
     お知らせいただき、ありがとうございます！<br>
     お役に立てて嬉しいです。
     </span>
+      <div id="additionnalEnquate" style="display:none;">
+        <div>【任意】困っていることを教えてください。</div>
+          <textarea id="additionnalEnquate_textArea" name="questions[74182]"></textarea>
+          <span id="additionnalEnquate_countChar"></span>
+          <!-- 入力できる文字数は1500文字まで。アンケートには表示しない-->
+          <div id="enquete_note">
+           <ul>
+            <li>個人情報や秘密保持義務のある情報を含めないでください。</li>
+            <li>質問や要望への返答は行っておりません。</li>
+           </ul>
+          </div>
+          <input type="submit" value="送信する" id="feedback_send" class="enqueteBtn btn_disabled">
+          <input type="submit" value="閉じる" id="feedback_sendWithoutComment" class="enqueteBtn">
+      </div>
     <span id="enqueteSorry" style="display:none;">
     お知らせいただき、ありがとうございます！<br>
     ぜひご意見をお聞かせください。
     </span>
-    <div id="additionnalEnquate" style="display:none;">
+      <div id="additionnalEnquate" style="display:none;">
       <div>【任意】困っていることを教えてください。</div>
         <textarea id="additionnalEnquate_textArea" name="questions[74182]"></textarea>
         <span id="additionnalEnquate_countChar"></span>
@@ -50,7 +64,7 @@
         </div>
         <input type="submit" value="送信する" id="feedback_send" class="enqueteBtn btn_disabled">
         <input type="submit" value="閉じる" id="feedback_sendWithoutComment" class="enqueteBtn">
-    </div>
+      </div>
   </form>
 </aside>
 <script src="{{ "javascripts/enquete.js" | relURL }}"></script>
