--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -714,6 +714,13 @@ cursor: pointer;
   font-size: .9rem;
 }
 
+.main {
+  padding: 12px 0 6rem;
+  width: 100%;
+  /* position: relative; */
+  overflow: hidden;
+}
+
 .btn-article-vote a {
   display: inline-block;
   text-decoration: none;
@@ -727,19 +734,13 @@ cursor: pointer;
   transition: .3s;
 }
 .btn-article-vote .btn-article-vote-up .btn-article-vote-down .fa-stack-2x {
-  color: #70ffff;
+  color: #74c1f8;
 }
 .btn-social-giza a:hover .fa-stack-2x {
   -webkit-transform: rotate(60deg);
   transform: rotate(60deg);
 }
 
-.main {
-  padding: 12px 0 6rem;
-  width: 100%;
-  /* position: relative; */
-  overflow: hidden;
-}
 #enqueteForm {
   display: inline;
 }
